src/App.scss
$input-field-height: 1.5rem;

html, body{
  padding: 0;
  margin: 0;
}

.center {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  border: 1px solid;
  border-color: #ddd;
  padding: 1rem;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
  height: 300px;
  width: 700px;
  border-radius: 1.25rem;
}

.combobox {
  position: relative;
}

.input-field {
 height: $input-field-height;
}

.listbox {
  // display: none;
  position: absolute;
  top: calc($input-field-height / 2 + 1px);
  left: 0;
  width: 100%;
  max-height: 240px;
  overflow-y: scroll;
  border: 1px solid black;
  list-style: none;
  padding: 0;
  box-sizing: border-box;
}

.listbox > li {
  cursor: pointer;
  padding-left: 4px;
  background-color: white;
}

.listbox > li:hover, .listbox > .highlight {
  background-color: aqua;
}

// .listbox > .highlight {
//   background-color: red;
// }

